fix: grey box spacing

--- a/src/components/GreyBox/styles.module.scss
+++ b/src/components/GreyBox/styles.module.scss
@@ -11,6 +11,6 @@
 
   &__container {
     background-color: $color-light-grey;
-    padding: spacing(4);
+    padding: spacing(4) spacing(6);
   }
 }
